=== HEAD

* Convert Java CLOB objects to ruby strings when using the JDBC JTDS subadapter (christian.michon)

* If Thread#kill is called on a thread with an open transaction, roll the transaction back on ruby 1.8 and rubinius (jeremyevans)

* Split informix adapter into shared/specific parts, add JDBC informix subadapter (jeremyevans)

=== 3.23.0 (2011-05-02)

* Migrate issue tracker from Google Code to GitHub Issues (jeremyevans)

* Add support for filtering by associations to model datasets (jeremyevans)

* Don't call insert_select when saving a model that doesn't select all columns of the table (jeremyevans)

* Fix bug when using :select=>[] option for a many_to_many association (jeremyevans)

* Add a columns_introspection extension that attempts to skip database queries by introspecting selected columns (jeremyevans)

* When combining old integer migrations and new timestamp migrations, make sure old integer migrations are all applied first (jeremyevans)

* Support dynamic callbacks to customize regular association loading at query time (jeremyevans)

* Support cascading of eager loading with dynamic callbacks for both eager and eager_graph (jeremyevans)

* Make the xml_serializer plugin handle namespaced models by using __ instead of / as a separator (jeremyevans)

* Allow the :eager_grapher association proc to accept a single hash instead of 3 arguments (jfirebaugh)

* Support dynamic callbacks to customize eager loading at query time (jfirebaugh, jeremyevans)

* Fix bug in the identity_map plugin for many_to_one associations when the association reflection hadn't been filled in yet (funny-falcon)

* Add serialization_modification_detection plugin for detecting changes in serialized columns (jeremyevans) (#333)

=== 3.22.0 (2011-04-01)

* Add disconnect detection to tinytds adapter, though correct behavior may require an update to tiny_tds (cult_hero)
